--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,15 @@ background-attachment: fixed;
 -o-background-size: cover;
 background-size: cover; 
 }
+@media (min-width: 375px) and (max-width: 667px) {
+.intro {
+background: url(../img/intro-bg.jpg) no-repeat right top;
+	background-color: #e5e5e5;
+	background-size: 100%;
+height: 100vh;
+width: 100%;
+  }
+}
 .intro .overlay {
 	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,d5dade+100&0.5+0,0+100 */
 	background: -moz-linear-gradient(left, rgba(255,255,255,0.5) 0%, rgba(213,218,222,0) 100%); /* FF3.6-15 */
